Complete Duration and Scale event handling implementation

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -3,11 +3,11 @@
     "subtitle": "A simple tool to calculate your durations irrespective of time.",
     "label": "Select a language!",
     "hours": "Hours",
-    "minutes": "minutes",
-    "seconds": "seconds",
-    "milliseconds": "milliseconds",
-    "operation": "operation",
-    "scale": "scale",
+    "minutes": "Minutes",
+    "seconds": "Seconds",
+    "milliseconds": "Milliseconds",
+    "operation": "Operation",
+    "scale": "Scale",
     "compute": "Compute!",
     "result": "Result: {{hours}} hrs, {{minutes}} min, {{seconds}} sec, {{milliseconds}} millis"
 }
