Organize app into components

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -9,7 +9,12 @@
     "operation": "عملية",
     "scale": "المضروب به / المقسوم عليه",
     "compute": "إجراء حساب",
-    "result": "نتيجة: {{hours}} س, {{minutes}} د, {{seconds}} ث, {{milliseconds}} م",
+    "result": "نتيجة",
+    "durationResult": "{{hours}} س, {{minutes}} د, {{seconds}} ث, {{milliseconds}} م",
+    "toHours": "{{hours}} س",
+    "toMinutes": "{{minutes}} د",
+    "toSeconds": "{{seconds}} ث",
+    "toMillis": "{{milliseconds}} م",
     "rows": "صفوف: {{rowCount}}",
     "rowNumLabel": "صف #",
     "addRows": "إضافة صفوف",
