--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -9,7 +9,12 @@
     "operation": "Operation",
     "scale": "Scale",
     "compute": "Compute!",
-    "result": "Result: {{hours}} hrs, {{minutes}} min, {{seconds}} sec, {{milliseconds}} millis",
+    "result": "Result",
+    "durationResult": "{{hours}} hrs, {{minutes}} min, {{seconds}} sec, {{milliseconds}} millis",
+    "toHours": "{{hours}} hrs",
+    "toMinutes": "{{minutes}} min",
+    "toSeconds": "{{seconds}} sec",
+    "toMillis": "{{milliseconds}} millis",
     "rows": "Rows: {{rowCount}}",
     "rowNumLabel": "Row #",
     "addRows": "Add Rows",
