Styled for mobile, test on deployment

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -1,12 +1,13 @@
 {
     "title": "حاسبة المدة",
     "subtitle": "أداة بسيطة لحساب مددكم بغض النظر عن الوقت.",
-    "label": "اختيار لغة!",
+    "label": "اختيار لغة: ",
+    "loading": "يحمل...",
     "hours": "ساعات",
     "minutes": "دقائق",
     "seconds": "ثانيات",
     "milliseconds": "ميلي ثانية",
-    "operation": "عملية",
+    "operand": "معامل",
     "scale": "المضروب به / المقسوم عليه",
     "compute": "إجراء حساب",
     "result": "نتيجة",
