--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,12 +1,13 @@
 {
     "title": "Duration Calculator",
     "subtitle": "A simple tool to calculate your durations irrespective of time.",
-    "label": "Select a language!",
+    "label": "Select a language: ",
+    "loading": "Loading...",
     "hours": "Hours",
     "minutes": "Minutes",
     "seconds": "Seconds",
     "milliseconds": "Milliseconds",
-    "operation": "Operation",
+    "operand": "Operand",
     "scale": "Scale",
     "compute": "Compute!",
     "result": "Result",
