Add tooltips to all controls

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -21,9 +21,16 @@
     "addRows": "إضافة صفوف",
     "rowTooltip": "ملاحظة: الحد الأقصى لعدد الصفوف لهذا الجدول هو {{maxRowCount}}.",
     "errors": {
-        "divideByZero": "لا يمكنك القسمة على صفر!"
+        "divideByZero": "لا يمكنك القسمة على الصفر!"
     },
     "tooltips": {
-        "compute": "اضغط هذا الزر لإجراء حساب المدة الإجمالية."
+        "compute": "اضغط على هذا الزر لحساب المدة الإجمالية.",
+        "adjust": "اسحب مقبض شريط التمرير لضبط عدد الصفوف في الجدول، من {{minRowSize}} إلى {{maxRowSize}}.",
+        "hoursField": "حدد عدد الساعات.",
+        "minutesField": "حدد عدد الدقائق.",
+        "secondsField": "حدد عدد الثواني.",
+        "millisField": "حدد عدد الملي ثواني.",
+        "operandDropDown": "اختر العملية الرياضية التي ترغب في تنفيذها. ملاحظة: سيتم تطبيق ذلك على الإجمال الجاري.",
+        "scaleField": "حدد القيمة التي ترغب في ضرب أو قسمة الإجمال الجاري عليها."
     }
 }
