Complete contact link, add custom logo

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -20,6 +20,7 @@
     "rowNumLabel": "صف #",
     "addRows": "إضافة صفوف",
     "rowTooltip": "ملاحظة: الحد الأقصى لعدد الصفوف لهذا الجدول هو {{maxRowCount}}.",
+    "contact": "الاتصال بالمطور",
     "errors": {
         "divideByZero": "لا يمكنك القسمة على الصفر!"
     },
@@ -31,6 +32,7 @@
         "secondsField": "حدد عدد الثواني.",
         "millisField": "حدد عدد الملي ثواني.",
         "operandDropDown": "اختر العملية الرياضية التي ترغب في تنفيذها. ملاحظة: سيتم تطبيق ذلك على الإجمال الجاري.",
-        "scaleField": "حدد القيمة التي ترغب في ضرب أو قسمة الإجمال الجاري عليها."
+        "scaleField": "حدد القيمة التي ترغب في ضرب أو قسمة الإجمال الجاري عليها.",
+        "contact": "اتصل بالمطور، عدنان وزوز، للاستفسارات."
     }
 }
