Add more languages for fun, comment and format all code

--- a/public/i18n/ur.json
+++ b/public/i18n/ur.json
@@ -33,6 +33,6 @@
         "millisField": "ملی سیکنڈ کی تعداد سیٹ کریں۔",
         "operandDropDown": "آپریند کا انتخاب کریں۔ نوٹ: یہ جاری رقم پر لاگو ہوتا ہے۔",
         "scaleField": "اس قدر کا انتخاب کریں جس سے آپ جاری رقم کو تقسیم یا ضرب کرنا چاہتے ہیں۔",
-        "contact": "ڈیولپر، عدنان واز واز سے سوالات کے لیے رابطہ کریں۔"
+        "contact": "ڈیولپر، عدنان وزوز سے سوالات کے لیے رابطہ کریں۔"
     }
 }
