Add Ukranian, fix Amharic

--- a/public/i18n/am.json
+++ b/public/i18n/am.json
@@ -33,6 +33,6 @@
         "millisField": "የሚሊሰከንድ ብዛት ያዝሩ።",
         "operandDropDown": "ለመፈጸም የተመረጠውን ሒሳብ እንደገና ያምሩ። ማስታወሻ: ይህ በተከታታይ ጠቅላላ ላይ የሚደርስ ነው።",
         "scaleField": "ጠቅላላን ለመከፋፈል የሚፈልጉትን ዋጋ አቅርቡ።",
-        "contact": "ማንኛውንም ጥያቄ ለማቅረብ እባኮትን ለመተጋጋሚው ይገናኙ።"
+        "contact": "ከምርት ጋር ያገናኙ፣ አድናን ወዝወዝ፣ ለጥያቄዎች።"
     }
 }
