Corrected Arabic translation

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -5,7 +5,7 @@
     "loading": "يحمل...",
     "hours": "ساعات",
     "minutes": "دقائق",
-    "seconds": "ثانيات",
+    "seconds": "ثواني",
     "milliseconds": "ميلي ثانية",
     "operand": "معامل",
     "scale": "المضروب به / المقسوم عليه",
